@@ -16,31 +16,36 @@
 
 package com.netflix.spinnaker.clouddriver.cloudfoundry.deploy.converters;
 
+import static java.util.Collections.emptyMap;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Matchers.any;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.netflix.spinnaker.clouddriver.artifacts.ArtifactCredentialsRepository;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.artifacts.ArtifactCredentialsFromString;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.cache.CacheRepository;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.client.CloudFoundryClient;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.client.MockCloudFoundryClient;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.client.model.v2.AbstractServiceInstance;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.client.model.v2.Resource;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.client.model.v2.ServiceInstance;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.config.CloudFoundryConfigurationProperties;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.deploy.description.DeployCloudFoundryServiceDescription;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundryOrganization;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundrySpace;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.provider.CloudFoundryProvider;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.security.CloudFoundryCredentials;
-import com.netflix.spinnaker.clouddriver.security.AccountCredentialsProvider;
-import com.netflix.spinnaker.clouddriver.security.AccountCredentialsRepository;
-import com.netflix.spinnaker.clouddriver.security.DefaultAccountCredentialsProvider;
-import com.netflix.spinnaker.clouddriver.security.MapBackedAccountCredentialsRepository;
-import io.vavr.collection.HashMap;
-import io.vavr.collection.List;
-import java.util.Collections;
-import java.util.Map;
-import java.util.Optional;
+import com.netflix.spinnaker.credentials.CredentialsRepository;
+import com.netflix.spinnaker.credentials.MapBackedCredentialsRepository;
+import com.netflix.spinnaker.credentials.NoopCredentialsLifecycleHandler;
+import java.util.*;
+import java.util.concurrent.ForkJoinPool;
 import javax.annotation.Nullable;
+import okhttp3.OkHttpClient;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.stubbing.Answer;
@@ -48,13 +53,14 @@ import org.mockito.stubbing.Answer;
 class DeployCloudFoundryServiceAtomicOperationConverterTest {
 
   private final CloudFoundryClient cloudFoundryClient = new MockCloudFoundryClient();
+  private final CacheRepository cacheRepository = mock(CacheRepository.class);
 
   {
     when(cloudFoundryClient.getOrganizations().findByName(any()))
         .thenReturn(
             Optional.of(CloudFoundryOrganization.builder().id("space-guid").name("space").build()));
 
-    when(cloudFoundryClient.getOrganizations().findSpaceByRegion(any()))
+    when(cloudFoundryClient.getSpaces().findSpaceByRegion(any()))
         .thenAnswer(
             (Answer<Optional<CloudFoundrySpace>>)
                 invocation ->
@@ -71,56 +77,74 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   }
 
   private final CloudFoundryCredentials cloudFoundryCredentials =
-      new CloudFoundryCredentials("test", "", "", "", "", "", "", false) {
+      new CloudFoundryCredentials(
+          "test",
+          "managerUri",
+          "metricsUri",
+          "api.Host",
+          "userName",
+          "password",
+          "environment",
+          false,
+          false,
+          500,
+          cacheRepository,
+          null,
+          ForkJoinPool.commonPool(),
+          emptyMap(),
+          new OkHttpClient(),
+          new CloudFoundryConfigurationProperties.ClientConfig(),
+          new CloudFoundryConfigurationProperties.LocalCacheConfig()) {
         public CloudFoundryClient getClient() {
           return cloudFoundryClient;
         }
       };
 
+  private final CredentialsRepository<ArtifactCredentialsFromString>
+      artifactCredentialsFromStringCredentialsRepository =
+          new MapBackedCredentialsRepository<>(
+              ArtifactCredentialsFromString.ARTIFACT_TYPE, new NoopCredentialsLifecycleHandler<>());
+
   private final ArtifactCredentialsRepository artifactCredentialsRepository =
       new ArtifactCredentialsRepository(
-          Collections.singletonList(
-              Collections.singletonList(
-                  new ArtifactCredentialsFromString(
-                      "test",
-                      List.of("test").asJava(),
-                      "service_instance_name: my-service-instance-name\n"
-                          + "service: my-service\n"
-                          + "service_plan: my-service-plan\n"
-                          + "tags:\n"
-                          + "- tag1\n"
-                          + "updatable: false\n"
-                          + "parameters: |\n"
-                          + "  { \"foo\": \"bar\" }\n"))));
+          Collections.singletonList(artifactCredentialsFromStringCredentialsRepository));
 
-  private final AccountCredentialsRepository accountCredentialsRepository =
-      new MapBackedAccountCredentialsRepository();
+  private final CredentialsRepository<CloudFoundryCredentials> credentialsRepository =
+      new MapBackedCredentialsRepository<>(CloudFoundryProvider.PROVIDER_ID, null);
 
   {
-    accountCredentialsRepository.update("test", cloudFoundryCredentials);
+    artifactCredentialsFromStringCredentialsRepository.save(
+        new ArtifactCredentialsFromString(
+            "test",
+            List.of("test"),
+            "service_instance_name: my-service-instance-name\n"
+                + "service: my-service\n"
+                + "service_plan: my-service-plan\n"
+                + "tags:\n"
+                + "- tag1\n"
+                + "updatable: false\n"
+                + "parameters: |\n"
+                + "  { \"foo\": \"bar\" }\n"));
+    credentialsRepository.save(cloudFoundryCredentials);
   }
 
-  private final AccountCredentialsProvider accountCredentialsProvider =
-      new DefaultAccountCredentialsProvider(accountCredentialsRepository);
   private final DeployCloudFoundryServiceAtomicOperationConverter converter =
       new DeployCloudFoundryServiceAtomicOperationConverter();
 
   @BeforeEach
   void initializeClassUnderTest() {
-    converter.setAccountCredentialsProvider(accountCredentialsProvider);
-    converter.setObjectMapper(new ObjectMapper());
+    converter.setCredentialsRepository(credentialsRepository);
   }
 
   @Test
   void convertManifestMapToServiceAttributes() {
     final Map input =
-        HashMap.of(
-                "service", "my-service",
-                "service_instance_name", "my-service-instance-name",
-                "service_plan", "my-service-plan",
-                "tags", List.of("my-tag").asJava(),
-                "parameters", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "service", "my-service",
+            "service_instance_name", "my-service-instance-name",
+            "service_plan", "my-service-plan",
+            "tags", List.of("my-tag"),
+            "parameters", "{\"foo\": \"bar\"}");
 
     assertThat(converter.convertManifest(input))
         .isEqualToComparingFieldByFieldRecursively(
@@ -130,18 +154,17 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
                 .setServicePlan("my-service-plan")
                 .setTags(Collections.singleton("my-tag"))
                 .setUpdatable(true)
-                .setParameterMap(HashMap.<String, Object>of("foo", "bar").toJavaMap()));
+                .setParameterMap(Map.<String, Object>of("foo", "bar")));
   }
 
   @Test
   void convertManifestMapToServiceAttributesMissingServiceThrowsException() {
     final Map input =
-        HashMap.of(
-                "service_instance_name", "my-service-instance-name",
-                "service_plan", "my-service-plan",
-                "tags", Collections.singletonList("my-tag"),
-                "parameters", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "service_instance_name", "my-service-instance-name",
+            "service_plan", "my-service-plan",
+            "tags", Collections.singletonList("my-tag"),
+            "parameters", "{\"foo\": \"bar\"}");
 
     assertThrows(
         IllegalArgumentException.class,
@@ -152,12 +175,11 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   @Test
   void convertManifestMapToServiceAttributesMissingServiceNameThrowsException() {
     final Map input =
-        HashMap.of(
-                "service_instance_name", "my-service-instance-name",
-                "service_plan", "my-service-plan",
-                "tags", Collections.singletonList("my-tag"),
-                "parameters", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "service_instance_name", "my-service-instance-name",
+            "service_plan", "my-service-plan",
+            "tags", Collections.singletonList("my-tag"),
+            "parameters", "{\"foo\": \"bar\"}");
 
     assertThrows(
         IllegalArgumentException.class,
@@ -168,12 +190,11 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   @Test
   void convertManifestMapToServiceAttributesMissingServicePlanThrowsException() {
     final Map input =
-        HashMap.of(
-                "service", "my-service",
-                "service_instance_name", "my-service-instance-name",
-                "tags", Collections.singletonList("my-tag"),
-                "parameters", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "service", "my-service",
+            "service_instance_name", "my-service-instance-name",
+            "tags", Collections.singletonList("my-tag"),
+            "parameters", "{\"foo\": \"bar\"}");
 
     assertThrows(
         IllegalArgumentException.class,
@@ -184,14 +205,13 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   @Test
   void convertCupsManifestMapToUserProvidedServiceAttributes() {
     final Map input =
-        HashMap.of(
-                "service_instance_name", "my-service-instance-name",
-                "syslog_drain_url", "test-syslog-drain-url",
-                "updatable", false,
-                "route_service_url", "test-route-service-url",
-                "tags", Collections.singletonList("my-tag"),
-                "credentials_map", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "service_instance_name", "my-service-instance-name",
+            "syslog_drain_url", "test-syslog-drain-url",
+            "updatable", false,
+            "route_service_url", "test-route-service-url",
+            "tags", Collections.singletonList("my-tag"),
+            "credentials_map", "{\"foo\": \"bar\"}");
 
     assertThat(converter.convertUserProvidedServiceManifest(input))
         .isEqualToComparingFieldByFieldRecursively(
@@ -207,12 +227,11 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   @Test
   void convertCupsManifestMapToUserProvidedServiceAttributesMissingServiceNameThrowsException() {
     final Map input =
-        HashMap.of(
-                "syslog_drain_url", "test-syslog-drain-url",
-                "route_service_url", "test-route-service-url",
-                "tags", Collections.singletonList("my-tag"),
-                "credentials_map", "{\"foo\": \"bar\"}")
-            .toJavaMap();
+        Map.of(
+            "syslog_drain_url", "test-syslog-drain-url",
+            "route_service_url", "test-route-service-url",
+            "tags", Collections.singletonList("my-tag"),
+            "credentials_map", "{\"foo\": \"bar\"}");
 
     assertThrows(
         IllegalArgumentException.class,
@@ -223,23 +242,21 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   @Test
   void convertDescriptionWithUserProvidedInput() {
     final Map input =
-        HashMap.of(
-                "credentials",
-                "test",
-                "region",
-                "org > space",
-                "userProvided",
-                true,
-                "manifest",
-                Collections.singletonList(
-                    HashMap.of(
-                            "serviceInstanceName", "userProvidedServiceName",
-                            "tags", Collections.singletonList("my-tag"),
-                            "syslogDrainUrl", "http://syslogDrainUrl.io",
-                            "credentials", "{\"foo\": \"bar\"}",
-                            "routeServiceUrl", "http://routeServiceUrl.io")
-                        .toJavaMap()))
-            .toJavaMap();
+        Map.of(
+            "credentials",
+            "test",
+            "region",
+            "org > space",
+            "userProvided",
+            true,
+            "manifest",
+            Collections.singletonList(
+                Map.of(
+                    "serviceInstanceName", "userProvidedServiceName",
+                    "tags", Collections.singletonList("my-tag"),
+                    "syslogDrainUrl", "http://syslogDrainUrl.io",
+                    "credentials", "{\"foo\": \"bar\"}",
+                    "routeServiceUrl", "http://routeServiceUrl.io")));
 
     final DeployCloudFoundryServiceDescription result = converter.convertDescription(input);
     assertThat(result.getServiceAttributes()).isNull();
@@ -251,7 +268,54 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
                 .setRouteServiceUrl("http://routeServiceUrl.io")
                 .setTags(Collections.singleton("my-tag"))
                 .setUpdatable(true)
-                .setCredentials(HashMap.<String, Object>of("foo", "bar").toJavaMap()));
+                .setCredentials(Map.of("foo", "bar")));
+  }
+
+  @Test
+  void convertDescriptionWithUserProvidedInputAndVersioned() {
+    final Map input =
+        Map.of(
+            "credentials",
+            "test",
+            "region",
+            "org > space",
+            "userProvided",
+            true,
+            "manifest",
+            Collections.singletonList(
+                Map.of(
+                    "serviceInstanceName", "userProvidedServiceName",
+                    "tags", Collections.singletonList("my-tag"),
+                    "syslogDrainUrl", "http://syslogDrainUrl.io",
+                    "credentials", "{\"foo\": \"bar\"}",
+                    "versioned", "true",
+                    "updatable", "false",
+                    "routeServiceUrl", "http://routeServiceUrl.io")));
+
+    ServiceInstance si = new ServiceInstance();
+    si.setName("userProvidedServiceName-v000");
+    Resource<ServiceInstance> resource = new Resource<>();
+    resource.setEntity(si);
+    List<Resource<? extends AbstractServiceInstance>> serviceInstances = List.of(resource);
+
+    when(cloudFoundryClient
+            .getServiceInstances()
+            .findAllVersionedServiceInstancesBySpaceAndName(any(), any()))
+        .thenReturn(serviceInstances);
+
+    final DeployCloudFoundryServiceDescription result = converter.convertDescription(input);
+    assertThat(result.getServiceAttributes()).isNull();
+    assertThat(result.getUserProvidedServiceAttributes())
+        .isEqualToComparingFieldByFieldRecursively(
+            new DeployCloudFoundryServiceDescription.UserProvidedServiceAttributes()
+                .setServiceInstanceName("userProvidedServiceName-v001")
+                .setPreviousInstanceName("userProvidedServiceName-v000")
+                .setSyslogDrainUrl("http://syslogDrainUrl.io")
+                .setRouteServiceUrl("http://routeServiceUrl.io")
+                .setTags(Collections.singleton("my-tag"))
+                .setUpdatable(false)
+                .setVersioned(true)
+                .setCredentials(Map.of("foo", "bar")));
   }
 
   private static class WithMap {
